--- a/DnsTube.Service/ClientApp/settings.html
+++ b/DnsTube.Service/ClientApp/settings.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>DnsTube v2.0</title>
+		<title>DnsTube</title>
 
 	</head>
 	<body>
@@ -16,7 +16,7 @@
 			<article class="content border">
 				<nav>
 					<ul>
-						<li><strong class="title">DnsTube v2.0.0-beta4</strong></li>
+						<li><strong class="title">DnsTube v2.0.0</strong></li>
 					</ul>
 					<ul>
 						<li><a href="/index.html"
