--- a/DnsTube.Service/ClientApp/settings.html
+++ b/DnsTube.Service/ClientApp/settings.html
@@ -151,6 +151,7 @@
 								<div>
 									<input type="number" name="UpdateIntervalMinutes"
 										id="updateIntervalMinutes" value="30" min="1">
+									<small>Changes to interval take effect the next time the timer fires. Click the <b>update now</b> button on the <a href="/index.html">Home</a> page to immediately change the schedule</small>
 								</div>
 							</div>
 							<div>
