save adapter setting

--- a/DnsTube.Service/ClientApp/settings.html
+++ b/DnsTube.Service/ClientApp/settings.html
@@ -165,7 +165,7 @@
 									data-placement="right" class="tooltip"><i
 										class="fa-solid fa-circle-info"></i></span>
 								<div>
-									<select id="networkAdapter"> </select>
+									<select id="networkAdapter" name="NetworkAdapter"> </select>
 								</div>
 							</div>
 
