--- a/DnsTube.Service/ClientApp/settings.html
+++ b/DnsTube.Service/ClientApp/settings.html
@@ -159,9 +159,9 @@
 							</div>
 
 							<div>
-								<label for="fruit">Network Adapter</label>
+								<label for="fruit">Network Adapter (requires service restart)</label>
 								<span
-									data-tooltip="Select an interface to use for determining public IP address."
+									data-tooltip="Select an interface to use for determining public IP address. You'll need to restart the service if you change this."
 									data-placement="right" class="tooltip"><i
 										class="fa-solid fa-circle-info"></i></span>
 								<div>
